// <auto-generated />
using System;
using Capstone.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace Capstone.Migrations
{
    [DbContext(typeof(AppDbContext))]
    [Migration("20250928062103_AddOAuthFields")]
    partial class AddOAuthFields
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "9.0.5")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("Capstone.Models.NomsaurModel+ChatMessage", b =>
                {
                    b.Property<int>("MessageId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("MessageId"));

                    b.Property<string>("IntentDetected")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.Property<string>("MessageText")
                        .IsRequired()
                        .HasMaxLength(1000)
                        .HasColumnType("nvarchar(1000)");

                    b.Property<string>("ParametersJson")
                        .IsRequired()
                        .HasMaxLength(500)
                        .HasColumnType("nvarchar(500)");

                    b.Property<string>("Sender")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("nvarchar(20)");

                    b.Property<int>("SessionId")
                        .HasColumnType("int");

                    b.Property<DateTime>("Timestamp")
                        .HasColumnType("datetime2");

                    b.HasKey("MessageId");

                    b.HasIndex("SessionId");

                    b.ToTable("ChatMessages");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+ChatSession", b =>
                {
                    b.Property<int>("SessionId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("SessionId"));

                    b.Property<DateTime?>("EndedAt")
                        .HasColumnType("datetime2");

                    b.Property<DateTime>("StartedAt")
                        .HasColumnType("datetime2");

                    b.Property<int>("UserId")
                        .HasColumnType("int");

                    b.HasKey("SessionId");

                    b.HasIndex("UserId");

                    b.ToTable("ChatSessions");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+DietaryRestriction", b =>
                {
                    b.Property<int>("DietaryRestrictionId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("DietaryRestrictionId"));

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.HasKey("DietaryRestrictionId");

                    b.ToTable("DietaryRestrictions");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+FoodPreference", b =>
                {
                    b.Property<int>("PreferenceId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("PreferenceId"));

                    b.Property<int>("FoodTypeId")
                        .HasColumnType("int");

                    b.Property<DateTime?>("LastSelected")
                        .HasColumnType("datetime2");

                    b.Property<string>("PreferenceLevel")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("nvarchar(20)");

                    b.Property<int>("PreferenceScore")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int")
                        .HasDefaultValue(5);

                    b.Property<int>("UserId")
                        .HasColumnType("int");

                    b.HasKey("PreferenceId");

                    b.HasIndex("FoodTypeId");

                    b.HasIndex("UserId");

                    b.ToTable("FoodPreferences");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+FoodType", b =>
                {
                    b.Property<int>("FoodTypeId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("FoodTypeId"));

                    b.Property<bool>("ContainsDairy")
                        .HasColumnType("bit");

                    b.Property<bool>("ContainsGluten")
                        .HasColumnType("bit");

                    b.Property<bool>("ContainsMeat")
                        .HasColumnType("bit");

                    b.Property<bool>("ContainsNuts")
                        .HasColumnType("bit");

                    b.Property<string>("CuisineType")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<bool>("IsBeverage")
                        .HasColumnType("bit");

                    b.Property<bool>("IsBreakfast")
                        .HasColumnType("bit");

                    b.Property<bool>("IsDessert")
                        .HasColumnType("bit");

                    b.Property<bool>("IsDinner")
                        .HasColumnType("bit");

                    b.Property<bool>("IsHealthy")
                        .HasColumnType("bit");

                    b.Property<bool>("IsHeartHealthy")
                        .HasColumnType("bit");

                    b.Property<bool>("IsHighProtein")
                        .HasColumnType("bit");

                    b.Property<bool>("IsIronRich")
                        .HasColumnType("bit");

                    b.Property<bool>("IsLowCalorie")
                        .HasColumnType("bit");

                    b.Property<bool>("IsLowGlycemic")
                        .HasColumnType("bit");

                    b.Property<bool>("IsLowSodium")
                        .HasColumnType("bit");

                    b.Property<bool>("IsLunch")
                        .HasColumnType("bit");

                    b.Property<bool>("IsNutrientDense")
                        .HasColumnType("bit");

                    b.Property<bool>("IsSnacks")
                        .HasColumnType("bit");

                    b.Property<bool>("IsVegan")
                        .HasColumnType("bit");

                    b.Property<bool>("IsVegetarian")
                        .HasColumnType("bit");

                    b.Property<bool>("IsVitaminRich")
                        .HasColumnType("bit");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.HasKey("FoodTypeId");

                    b.ToTable("FoodTypes");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+HealthCondition", b =>
                {
                    b.Property<int>("HealthConditionId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("HealthConditionId"));

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.Property<string>("RecommendedDiets")
                        .IsRequired()
                        .HasMaxLength(500)
                        .HasColumnType("nvarchar(500)");

                    b.HasKey("HealthConditionId");

                    b.ToTable("HealthConditions");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+User", b =>
                {
                    b.Property<int>("UserId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("UserId"));

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<DateTime?>("LastLogin")
                        .HasColumnType("datetime2");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("nvarchar(255)");

                    b.Property<string>("Provider")
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.Property<string>("ProviderData")
                        .HasMaxLength(500)
                        .HasColumnType("nvarchar(500)");

                    b.Property<string>("ProviderId")
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.HasKey("UserId");

                    b.ToTable("Users");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+UserBehavior", b =>
                {
                    b.Property<int>("BehaviorId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("BehaviorId"));

                    b.Property<string>("Action")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.Property<string>("Context")
                        .HasMaxLength(4000)
                        .HasColumnType("nvarchar(4000)");

                    b.Property<string>("CuisineType")
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.Property<string>("EstablishmentInfo")
                        .HasMaxLength(1000)
                        .HasColumnType("nvarchar(1000)");

                    b.Property<string>("EstablishmentName")
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<string>("IntentDetected")
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<string>("ParametersJson")
                        .IsRequired()
                        .HasMaxLength(1000)
                        .HasColumnType("nvarchar(1000)");

                    b.Property<string>("ReasonForRecommendation")
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<string>("Result")
                        .HasMaxLength(2000)
                        .HasColumnType("nvarchar(2000)");

                    b.Property<int?>("Satisfaction")
                        .HasColumnType("int");

                    b.Property<DateTime?>("SelectedAt")
                        .HasColumnType("datetime2");

                    b.Property<DateTime>("Timestamp")
                        .HasColumnType("datetime2");

                    b.Property<int>("UserId")
                        .HasColumnType("int");

                    b.HasKey("BehaviorId");

                    b.HasIndex("UserId");

                    b.ToTable("UserBehaviors");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+UserDietaryRestriction", b =>
                {
                    b.Property<int>("UserDietaryRestrictionId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("UserDietaryRestrictionId"));

                    b.Property<DateTime>("AddedAt")
                        .HasColumnType("datetime2");

                    b.Property<int>("DietaryRestrictionId")
                        .HasColumnType("int");

                    b.Property<int>("ImportanceLevel")
                        .HasColumnType("int");

                    b.Property<int>("UserId")
                        .HasColumnType("int");

                    b.HasKey("UserDietaryRestrictionId");

                    b.HasIndex("DietaryRestrictionId");

                    b.HasIndex("UserId");

                    b.ToTable("UserDietaryRestrictions");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+UserHealthCondition", b =>
                {
                    b.Property<int>("UserHealthConditionId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("UserHealthConditionId"));

                    b.Property<DateTime>("DiagnosedAt")
                        .HasColumnType("datetime2");

                    b.Property<int>("HealthConditionId")
                        .HasColumnType("int");

                    b.Property<int>("SeverityLevel")
                        .HasColumnType("int");

                    b.Property<int>("UserId")
                        .HasColumnType("int");

                    b.HasKey("UserHealthConditionId");

                    b.HasIndex("HealthConditionId");

                    b.HasIndex("UserId");

                    b.ToTable("UserHealthConditions");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+UserPreferencePattern", b =>
                {
                    b.Property<int>("PatternId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("PatternId"));

                    b.Property<decimal>("Confidence")
                        .HasPrecision(3, 2)
                        .HasColumnType("decimal(3,2)");

                    b.Property<DateTime>("LastObserved")
                        .HasColumnType("datetime2");

                    b.Property<int>("ObservationCount")
                        .HasColumnType("int");

                    b.Property<string>("PatternType")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.Property<string>("PatternValue")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<int>("SuccessfulInteractions")
                        .HasColumnType("int");

                    b.Property<int>("TotalInteractions")
                        .HasColumnType("int");

                    b.Property<int>("UserId")
                        .HasColumnType("int");

                    b.HasKey("PatternId");

                    b.HasIndex("UserId");

                    b.ToTable("UserPreferencePatterns");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+UserProfile", b =>
                {
                    b.Property<int>("ProfileId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("ProfileId"));

                    b.Property<string>("ActivityLevel")
                        .HasMaxLength(20)
                        .HasColumnType("nvarchar(20)");

                    b.Property<int?>("Age")
                        .HasColumnType("int");

                    b.Property<string>("Gender")
                        .HasMaxLength(20)
                        .HasColumnType("nvarchar(20)");

                    b.Property<DateTime>("LastUpdated")
                        .HasColumnType("datetime2");

                    b.Property<string>("PreferredLocation")
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<string>("PriceRange")
                        .HasMaxLength(20)
                        .HasColumnType("nvarchar(20)");

                    b.Property<int>("UserId")
                        .HasColumnType("int");

                    b.HasKey("ProfileId");

                    b.HasIndex("UserId")
                        .IsUnique();

                    b.ToTable("UserProfiles");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+ChatMessage", b =>
                {
                    b.HasOne("Capstone.Models.NomsaurModel+ChatSession", "ChatSession")
                        .WithMany("ChatMessages")
                        .HasForeignKey("SessionId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("ChatSession");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+ChatSession", b =>
                {
                    b.HasOne("Capstone.Models.NomsaurModel+User", "User")
                        .WithMany("ChatSessions")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+FoodPreference", b =>
                {
                    b.HasOne("Capstone.Models.NomsaurModel+FoodType", "FoodType")
                        .WithMany("FoodPreferences")
                        .HasForeignKey("FoodTypeId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("Capstone.Models.NomsaurModel+User", "User")
                        .WithMany("FoodPreferences")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("FoodType");

                    b.Navigation("User");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+UserBehavior", b =>
                {
                    b.HasOne("Capstone.Models.NomsaurModel+User", "User")
                        .WithMany("UserBehaviors")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+UserDietaryRestriction", b =>
                {
                    b.HasOne("Capstone.Models.NomsaurModel+DietaryRestriction", "DietaryRestriction")
                        .WithMany("UserDietaryRestrictions")
                        .HasForeignKey("DietaryRestrictionId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("Capstone.Models.NomsaurModel+User", "User")
                        .WithMany("UserDietaryRestrictions")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("DietaryRestriction");

                    b.Navigation("User");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+UserHealthCondition", b =>
                {
                    b.HasOne("Capstone.Models.NomsaurModel+HealthCondition", "HealthCondition")
                        .WithMany("UserHealthConditions")
                        .HasForeignKey("HealthConditionId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("Capstone.Models.NomsaurModel+User", "User")
                        .WithMany("UserHealthConditions")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("HealthCondition");

                    b.Navigation("User");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+UserPreferencePattern", b =>
                {
                    b.HasOne("Capstone.Models.NomsaurModel+User", "User")
                        .WithMany("UserPreferencePatterns")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+UserProfile", b =>
                {
                    b.HasOne("Capstone.Models.NomsaurModel+User", "User")
                        .WithOne("UserProfile")
                        .HasForeignKey("Capstone.Models.NomsaurModel+UserProfile", "UserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+ChatSession", b =>
                {
                    b.Navigation("ChatMessages");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+DietaryRestriction", b =>
                {
                    b.Navigation("UserDietaryRestrictions");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+FoodType", b =>
                {
                    b.Navigation("FoodPreferences");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+HealthCondition", b =>
                {
                    b.Navigation("UserHealthConditions");
                });

            modelBuilder.Entity("Capstone.Models.NomsaurModel+User", b =>
                {
                    b.Navigation("ChatSessions");

                    b.Navigation("FoodPreferences");

                    b.Navigation("UserBehaviors");

                    b.Navigation("UserDietaryRestrictions");

                    b.Navigation("UserHealthConditions");

                    b.Navigation("UserPreferencePatterns");

                    b.Navigation("UserProfile");
                });
#pragma warning restore 612, 618
        }
    }
}
